Add new figures for abundance distribution analysis.

--- a/scripts/Abundance Distribution.ipynb
+++ b/scripts/Abundance Distribution.ipynb
@@ -24,17 +24,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/setuptools/_importlib.py:23: UserWarning: `importlib-metadata` version is incompatible with `setuptools`.\n",
-      "This problem is likely to be solved by installing an updated version of `importlib-metadata`.\n",
-      "  warnings.warn(msg)  # Ensure a descriptive message is shown.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from multiprocessing import Pool\n",
     "from matplotlib import pyplot as plt\n",
@@ -60,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,6 +93,7 @@
     "        cold_disc_delta_circ=config[\"COLD_DISC_DELTA_CIRC\"],\n",
     "        bulge_max_specific_energy=config[\"BULGE_MAX_SPECIFIC_ENERGY\"])\n",
     "    s.add_metal_abundance(of, to)\n",
+    "    s.add_stellar_age()\n",
     "    \n",
     "    is_real_star = (s.type == 4) & (s.stellar_formation_time > 0)\n",
     "    is_main_obj = (s.halo == s.halo_idx) & (s.subhalo == s.subhalo_idx)\n",
@@ -111,6 +102,7 @@
     "    df[f\"[{of}/{to}]\"] = s.metal_abundance[\n",
     "        f\"{of}/{to}\"][is_real_star & is_main_obj]\n",
     "    df[\"RegionTag\"] = s.region_tag[is_real_star & is_main_obj]\n",
+    "    df[\"StellarAge_Gyr\"] = s.stellar_age[is_real_star & is_main_obj]\n",
     "\n",
     "    if tag_in_situ:\n",
     "        s.tag_in_situ_stars()\n",
@@ -194,6 +186,137 @@
     "        f\"../images/metal_abundance_distribution/{of}_{to}/\"\n",
     "        f\"with_stellar_origin/{simulation}{config['FILE_SUFFIX']}.pdf\")\n",
     "    plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-1a7294992fdc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m     plot_distribution_for_galaxy_with_stellar_origin(\n\u001b[1;32m      3\u001b[0m         \u001b[0msimulation\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msimulation\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mof\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"Fe\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mto\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"H\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m         \u001b[0mxlim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1.5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mylim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mxticks\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     )\n",
+      "\u001b[0;32m<ipython-input-8-4575cba4483f>\u001b[0m in \u001b[0;36mplot_distribution_for_galaxy_with_stellar_origin\u001b[0;34m(simulation, of, to, xlim, ylim, xticks)\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mgalaxy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msimulation\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mread_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msimulation\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msimulation\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mof\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mof\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mto\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtag_in_situ\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mfig\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfigsize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m7.4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2.0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-7-383cd98b48e9>\u001b[0m in \u001b[0;36mread_data\u001b[0;34m(simulation, of, to, tag_in_situ)\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0mdisc_min_circ\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"DISC_MIN_CIRC\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mcold_disc_delta_circ\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"COLD_DISC_DELTA_CIRC\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m         bulge_max_specific_energy=config[\"BULGE_MAX_SPECIFIC_ENERGY\"])\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_metal_abundance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mof\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mto\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_stellar_age\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/freya/u/fiza/repos/auriga-metals/auriga/snapshot.py\u001b[0m in \u001b[0;36mtag_particles_by_region\u001b[0;34m(self, disc_std_circ, disc_min_circ, cold_disc_delta_circ, bulge_max_specific_energy)\u001b[0m\n\u001b[1;32m    457\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    458\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcircularity\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 459\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_circularity\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    460\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_has_referenced_pot\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    461\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_reference_to_potential\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/freya/u/fiza/repos/auriga-metals/auriga/snapshot.py\u001b[0m in \u001b[0;36madd_circularity\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    387\u001b[0m         \u001b[0mis_star\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtype\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m&\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstellar_formation_time\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    388\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 389\u001b[0;31m         \u001b[0mbins\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mis_galaxy\u001b[0m \u001b[0;34m&\u001b[0m \u001b[0mis_star\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    390\u001b[0m         \u001b[0mii\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mis_galaxy\u001b[0m \u001b[0;34m&\u001b[0m \u001b[0mis_star\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margsort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margsort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    391\u001b[0m         enclosed_mass = np.add.accumulate(\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "for simulation in [f\"au{i}_or_l4_s127\" for i in settings.groups[\"Included\"]]:\n",
+    "    plot_distribution_for_galaxy_with_stellar_origin(\n",
+    "        simulation=simulation, of=\"Fe\", to=\"H\",\n",
+    "        xlim=(-3, 1.5), ylim=(0, 0.2), xticks=(-2, -1, 0, 1)\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_distribution_for_galaxy_by_age(\n",
+    "    simulation: str, of: str, to: str,\n",
+    "    xlim: tuple, ylim: tuple, xticks: list) -> None:\n",
+    "\n",
+    "    galaxy = parse(simulation)[0]\n",
+    "    df = read_data(simulation=simulation, of=of, to=to)\n",
+    "\n",
+    "    fig = plt.figure(figsize=(7.4, 2.0))\n",
+    "    gs = fig.add_gridspec(nrows=1, ncols=4, hspace=0.0, wspace=0.0)\n",
+    "    axs = gs.subplots(sharex=True, sharey=True)\n",
+    "\n",
+    "    for ax in axs.flat:\n",
+    "        ax.tick_params(which='both', direction=\"in\")\n",
+    "        ax.set_xlim(xlim)\n",
+    "        ax.set_ylim(ylim)\n",
+    "        ax.set_xticks(xticks)\n",
+    "        ax.set_xlabel(f'[{of}/{to}]')\n",
+    "        ax.set_ylabel(r\"$f_\\star$\")\n",
+    "        ax.grid(True, ls='-', lw=0.25, c=\"gainsboro\")\n",
+    "        ax.label_outer()\n",
+    "\n",
+    "    for idx, component in enumerate(settings.components):\n",
+    "\n",
+    "        n_stars_comp = (df[\"RegionTag\"] == idx).sum()\n",
+    "\n",
+    "        hist, bin_edges = np.histogram(\n",
+    "            a=df[f\"[{of}/{to}]\"][df[\"RegionTag\"] == idx],\n",
+    "            bins=config[\"ABUNDANCE_DISTRIBUTION\"][\"N_BINS\"], range=xlim)\n",
+    "        bin_centers = bin_edges[1:] - np.diff(bin_edges)[0] / 2\n",
+    "        axs[idx].plot(\n",
+    "            bin_centers, hist / n_stars_comp, zorder=11,\n",
+    "            c=settings.component_colors[component], lw=2)\n",
+    "\n",
+    "        hist, _ = np.histogram(\n",
+    "            a=df[f\"[{of}/{to}]\"][\n",
+    "                (df[\"RegionTag\"] == idx) & (df[\"StellarAge_Gyr\"] <= 5.0)],\n",
+    "            bins=config[\"ABUNDANCE_DISTRIBUTION\"][\"N_BINS\"], range=xlim)\n",
+    "        axs[idx].plot(\n",
+    "            bin_centers, hist / n_stars_comp, zorder=11,\n",
+    "            c=\"black\", lw=1.5, ls=\"-\", label=r\"$[0, 5]$\")\n",
+    "\n",
+    "        hist, _ = np.histogram(\n",
+    "            a=df[f\"[{of}/{to}]\"][\n",
+    "                (df[\"RegionTag\"] == idx) \\\n",
+    "                    & (df[\"StellarAge_Gyr\"] > 5.0) \\\n",
+    "                        & (df[\"StellarAge_Gyr\"] <= 10.0)],\n",
+    "            bins=config[\"ABUNDANCE_DISTRIBUTION\"][\"N_BINS\"], range=xlim)\n",
+    "        axs[idx].plot(\n",
+    "            bin_centers, hist / n_stars_comp, zorder=11,\n",
+    "            c=\"black\", lw=1.5, ls=(0, (1, 1)),\n",
+    "            label=r\"$(5, 10]$\")\n",
+    "\n",
+    "        hist, _ = np.histogram(\n",
+    "            a=df[f\"[{of}/{to}]\"][\n",
+    "                (df[\"RegionTag\"] == idx) \\\n",
+    "                    & (df[\"StellarAge_Gyr\"] > 10.0)],\n",
+    "            bins=config[\"ABUNDANCE_DISTRIBUTION\"][\"N_BINS\"], range=xlim)\n",
+    "        axs[idx].plot(\n",
+    "            bin_centers, hist / n_stars_comp, zorder=11,\n",
+    "            c=\"black\", lw=1.5, ls=(0, (5, 1)), label=r\"$(10, \\dots)$\")\n",
+    "\n",
+    "        axs[idx].text(\n",
+    "            x=0.05, y=0.95, size=8.0, ha=\"left\", va=\"top\",\n",
+    "            s=r\"$\\textbf{\" + list(settings.component_labels.values())[idx] \\\n",
+    "                + \"}$\",\n",
+    "            c=list(settings.component_colors.values())[idx],\n",
+    "            transform=axs[idx].transAxes)\n",
+    "\n",
+    "    axs[0].legend(loc=\"upper left\", framealpha=0, fontsize=6,\n",
+    "                  bbox_to_anchor=(0.009, 0.9), title=\"Stellar Age [Gyr]\",\n",
+    "                  title_fontsize=6)\n",
+    "\n",
+    "    axs[0].text(\n",
+    "        x=0.95, y=0.95, size=8.0,\n",
+    "        s=r\"$\\texttt{\" + f\"Au{galaxy}\" + \"}$\",\n",
+    "        ha='right', va='top', transform=axs[0].transAxes)\n",
+    "\n",
+    "    fig.savefig(\n",
+    "        f\"../images/metal_abundance_distribution/{of}_{to}/\"\n",
+    "        f\"by_stellar_age/{simulation}{config['FILE_SUFFIX']}.pdf\")\n",
+    "    plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for simulation in [\"au12_or_l4_s127\", \"au14_or_l4_s127\"]:\n",
+    "    plot_distribution_for_galaxy_by_age(\n",
+    "        simulation=simulation, of=\"Fe\", to=\"H\",\n",
+    "        xlim=(-3, 1.5), ylim=(0, 0.2), xticks=(-2, -1, 0, 1)\n",
+    "    )"
    ]
   },
   {
