Add new figure for Au6.

--- a/scripts/Abundance Maps.ipynb
+++ b/scripts/Abundance Maps.ipynb
@@ -12,17 +12,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/setuptools/_importlib.py:23: UserWarning: `importlib-metadata` version is incompatible with `setuptools`.\n",
-      "This problem is likely to be solved by installing an updated version of `importlib-metadata`.\n",
-      "  warnings.warn(msg)  # Ensure a descriptive message is shown.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.colors as mcolors\n",
@@ -172,6 +162,112 @@
     "        f\"../images/metallicity/\"\n",
     "        f\"map_OFe_vs_FeH_{simulation}{config['FILE_SUFFIX']}.pdf\")\n",
     "    plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_map_by_component_for_simulation(\n",
+    "        simulation: str, abundances: list,\n",
+    "        xlim: tuple, xticks: list,\n",
+    "        ylim: tuple, yticks: list) -> None:\n",
+    "    settings = Settings()\n",
+    "    galaxy = parse(simulation)[0]\n",
+    "    label = f\"Au{galaxy}\"\n",
+    "    df = read_data(simulation=simulation, abundances=abundances)\n",
+    "\n",
+    "    x_label = f\"[{abundances[0][0]}/{abundances[0][1]}]\"\n",
+    "    y_label = f\"[{abundances[1][0]}/{abundances[1][1]}]\"\n",
+    "\n",
+    "    fig = plt.figure(figsize=(8.0, 2.0))\n",
+    "    gs = fig.add_gridspec(nrows=1, ncols=5, hspace=0.0, wspace=0.0)\n",
+    "    axs = gs.subplots(sharex=True, sharey=True)\n",
+    "\n",
+    "    for ax in axs:\n",
+    "        ax.set_xlim(xlim)\n",
+    "        ax.set_xticks(xticks)\n",
+    "        ax.set_xlabel(x_label)\n",
+    "\n",
+    "        ax.set_ylim(ylim)\n",
+    "        ax.set_yticks(yticks)\n",
+    "        ax.set_ylabel(y_label)\n",
+    "\n",
+    "        ax.tick_params(which='both', direction=\"in\")\n",
+    "        ax.label_outer()\n",
+    "\n",
+    "    im = axs[0].hist2d(\n",
+    "            df[x_label], df[y_label],\n",
+    "            cmap='nipy_spectral', bins=config[\"ABUNDANCE_MAPS\"][\"N_BINS\"],\n",
+    "            range=[ax.get_xlim(), ax.get_ylim()],\n",
+    "            norm=mcolors.LogNorm(\n",
+    "                vmin=config[\"ABUNDANCE_MAPS\"][\"MIN_PART_COUNT\"],\n",
+    "                vmax=config[\"ABUNDANCE_MAPS\"][\"MAX_PART_COUNT\"]),\n",
+    "            rasterized=True)[-1]\n",
+    "    axs[0].text(\n",
+    "        x=0.05, y=0.05, size=8.0, ha=\"left\", va=\"bottom\",\n",
+    "        s=r\"$\\textbf{All}$\", c=\"black\", transform=axs[0].transAxes)\n",
+    "\n",
+    "    for i, c in enumerate(settings.components):\n",
+    "        ax = axs[i + 1]\n",
+    "        is_region = (df[\"ComponentTag\"] == settings.component_tags[c])\n",
+    "        im = ax.hist2d(\n",
+    "            df[x_label][is_region],\n",
+    "            df[y_label][is_region],\n",
+    "            cmap='nipy_spectral', bins=config[\"ABUNDANCE_MAPS\"][\"N_BINS\"],\n",
+    "            range=[ax.get_xlim(), ax.get_ylim()],\n",
+    "            norm=mcolors.LogNorm(\n",
+    "                vmin=config[\"ABUNDANCE_MAPS\"][\"MIN_PART_COUNT\"],\n",
+    "                vmax=config[\"ABUNDANCE_MAPS\"][\"MAX_PART_COUNT\"]),\n",
+    "            rasterized=True)[-1]\n",
+    "        ax.text(\n",
+    "            x=0.05, y=0.05, size=8.0, ha=\"left\", va=\"bottom\",\n",
+    "            s=r\"$\\textbf{\" + list(settings.component_labels.values())[i] \\\n",
+    "                + \"}$\",\n",
+    "            c=list(settings.component_colors.values())[i],\n",
+    "            transform=ax.transAxes)\n",
+    "        \n",
+    "\n",
+    "        median_x = np.nanmedian(df[x_label][is_region])\n",
+    "        median_y = np.nanmedian(df[y_label][is_region])\n",
+    "\n",
+    "        color = settings.component_colors[c]\n",
+    "        marker = settings.component_markers[c]\n",
+    "        ax.scatter(\n",
+    "            np.nanmedian(df[x_label][is_region]),\n",
+    "            np.nanmedian(df[y_label][is_region]),\n",
+    "            c=color, s=30, lw=1, edgecolors='k',\n",
+    "            zorder=15, marker=marker)\n",
+    "\n",
+    "    cbar = fig.colorbar(im, ax=axs[-1], orientation='vertical',\n",
+    "                        label=r'$N_\\star$', pad=0)\n",
+    "    cbar.ax.set_yticks([1E0, 1E1, 1E2, 1E3])\n",
+    "\n",
+    "    axs[0].text(\n",
+    "        x=0.05, y=0.95,\n",
+    "        s=r\"$\\texttt{\" + label + \"}$\", size=8.0, ha='left', va='top',\n",
+    "        transform=axs[0].transAxes)\n",
+    "\n",
+    "    fig.savefig(\n",
+    "        f\"../images/metallicity/\"\n",
+    "        f\"map_OFe_vs_FeH_by_component_{simulation}{config['FILE_SUFFIX']}.pdf\")\n",
+    "    plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "simulation = \"au6_or_l4_s127\"\n",
+    "plot_map_by_component_for_simulation(\n",
+    "    simulation=simulation,\n",
+    "    abundances=[(\"Fe\", 'H'), ('O', \"Fe\")],\n",
+    "    xlim=(-1, 1), xticks=[-0.5, 0, 0.5],\n",
+    "    ylim=(0.15, 0.35), yticks=[0.2, 0.25, 0.3])"
    ]
   },
   {
