Add helper methods for mergers.

--- a/scripts/Age Metallicity Relation.ipynb
+++ b/scripts/Age Metallicity Relation.ipynb
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Helpers:\n",
+    "    @staticmethod\n",
+    "    def read_satellites(simulation: str, fs_target: float = 0.1):\n",
+    "        data_path = f\"../results/{simulation}/\"\n",
+    "        _, rerun, _ = parse(simulation)\n",
+    "        \n",
+    "        lsnap = 251 if rerun is True else 127\n",
+    "        \n",
+    "        r200 = np.load(data_path + 'R200.npy')\n",
+    "        mergers = np.load(data_path + 'subhaloes.npy')\n",
+    "\n",
+    "        mergers_mask = np.array([])\n",
+    "        for idx in np.linspace(16, lsnap, lsnap-16 + 1):\n",
+    "            idxs = mergers[:, 1] == idx\n",
+    "            mask = (mergers[idxs, 2] < r200[int(idx-15), 2]) \\\n",
+    "                & (mergers[idxs, 4] > fs_target) & (mergers[idxs, 0] > 0)\n",
+    "            if mask.sum() > 0:\n",
+    "                mergers_mask = np.append(mergers_mask, 0)\n",
+    "            else:\n",
+    "                mergers_mask = np.append(mergers_mask, 1)    \n",
+    "\n",
+    "        return r200, mergers, mergers_mask\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def plot_mergers(simulation: str, ax: plt.Axes, fs_target: float = 0.1):\n",
+    "        r200, mergers, _ = Helpers.read_satellites(simulation, fs_target)\n",
+    "        \n",
+    "        for merger in mergers:\n",
+    "            if (merger[2] < r200[int(merger[1]-15), 2]) \\\n",
+    "                & (merger[4] > fs_target) \\\n",
+    "                    & (merger[0] > 0):\n",
+    "                rect = patches.Rectangle(\n",
+    "                    (merger[0], 0.1), 0.2, 99.9, linewidth=1,\n",
+    "                    edgecolor='none', facecolor='#dbdbdb', zorder=-1)\n",
+    "                ax.add_patch(rect)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +266,8 @@
     "for ax in axs.flatten():\n",
     "    ax.tick_params(which='both', direction=\"in\")\n",
     "    if ax == axs[-1, -1]: ax.axis(\"off\")\n",
-    "    ax.set_xlim(config[\"AGE_MIN\"], config[\"AGE_MAX\"])\n",
+    "    ax.set_xlim(config[\"AGE_METALLICITY_RELATION\"][\"AGE_MIN\"],\n",
+    "                config[\"AGE_METALLICITY_RELATION\"][\"AGE_MAX\"])\n",
     "    ax.set_xticks([2, 4, 6, 8, 10, 12])\n",
     "    ax.set_ylim(-4, 3)\n",
     "    ax.set_yticks([-3, -2, -1, 0, 1, 2])\n",
@@ -257,9 +301,11 @@
     "    ax.hist2d(df[\"StellarAge_Gyr\"],\n",
     "              df[\"[Fe/H]\"],\n",
     "              cmap='nipy_spectral',\n",
-    "              bins=N_BINS_MAP,\n",
+    "              bins=config[\"AGE_METALLICITY_RELATION\"][\"N_BINS_MAP\"],\n",
     "              range=[ax.get_xlim(), ax.get_ylim()],\n",
-    "              norm=mcolors.LogNorm(vmin=MAP_VMIN, vmax=MAP_VMAX),\n",
+    "              norm=mcolors.LogNorm(\n",
+    "                vmin=config[\"AGE_METALLICITY_RELATION\"][\"MAP_VMIN\"],\n",
+    "                vmax=config[\"AGE_METALLICITY_RELATION\"][\"MAP_VMAX\"]),\n",
     "              rasterized=True)\n",
     "\n",
     "    # Plot the median for this galaxy\n",
@@ -267,8 +313,9 @@
     "        x=df[\"StellarAge_Gyr\"],\n",
     "        values=df[\"[Fe/H]\"],\n",
     "        statistic=np.nanmedian,\n",
-    "        bins=N_RADIAL_BINS,\n",
-    "        range=AGE_RANGE)\n",
+    "        bins=config[\"AGE_METALLICITY_RELATION\"][\"N_BINS_AGE\"],\n",
+    "        range=(config[\"AGE_METALLICITY_RELATION\"][\"AGE_MIN\"],\n",
+    "               config[\"AGE_METALLICITY_RELATION\"][\"AGE_MAX\"]))\n",
     "    bin_centers = bin_edges[1:] - np.diff(bin_edges)[0] / 2\n",
     "    ax.plot(bin_centers, stat)\n",
     "\n",
