Add distributions for different stellar ages.

--- a/scripts/Abundance Distribution.ipynb
+++ b/scripts/Abundance Distribution.ipynb
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,6 +696,7 @@
     "        disc_min_circ=config[\"DISC_MIN_CIRC\"],\n",
     "        cold_disc_delta_circ=config[\"COLD_DISC_DELTA_CIRC\"],\n",
     "        bulge_max_specific_energy=config[\"BULGE_MAX_SPECIFIC_ENERGY\"])\n",
+    "    s.add_stellar_age()\n",
     "    for of, to in abundances:\n",
     "        s.add_metal_abundance(of, to)\n",
     "    \n",
@@ -707,6 +708,7 @@
     "        data[f\"[{of}/{to}]\"] = s.metal_abundance[\n",
     "            f\"{of}/{to}\"][is_real_star & is_main_obj]\n",
     "    data[\"RegionTag\"] = s.region_tag[is_real_star & is_main_obj]\n",
+    "    data[\"StellarAge_Gyr\"] = s.stellar_age[is_real_star & is_main_obj]\n",
     "\n",
     "    df = pd.DataFrame(data)\n",
     "    df[~np.isfinite(df)] = np.nan\n",
@@ -717,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -896,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -909,7 +911,7 @@
     "        ax = axs[i, j]\n",
     "        ax.tick_params(which='both', direction=\"in\")\n",
     "        ax.set_ylim(ylims[j])\n",
-    "        ax.set_xlim(xlims[j])\n",
+    "        ax.set_xlim(abundance_lims[j])\n",
     "        ax.set_xticks(xticks[j])\n",
     "        if not ax.get_subplotspec().is_last_row():\n",
     "            ax.set_xticklabels([])\n",
@@ -938,8 +940,10 @@
     "            color = settings.component_colors[c] if galaxy == 6 else \"silver\"\n",
     "            ax = axs[i, j]\n",
     "            is_region = df[\"RegionTag\"] == i\n",
+    "            is_age = df[\"StellarAge_Gyr\"] > 5.0\n",
     "\n",
-    "            pdf = gaussian_kde(df[f\"[{of}/{to}]\"][is_region].to_numpy())\n",
+    "            pdf = gaussian_kde(\n",
+    "                df[f\"[{of}/{to}]\"][is_region & is_age].to_numpy())\n",
     "            pdf_x = np.linspace(ax.get_xlim()[0], ax.get_xlim()[1], 100)\n",
     "            ax.plot(pdf_x, pdf(pdf_x), lw=1.0,\n",
     "                    color=color, zorder=zorder, label=label)\n",
@@ -950,7 +954,8 @@
     "        color = settings.component_colors[c]\n",
     "        ax = axs[i, j]\n",
     "        is_region = df[\"RegionTag\"] == i\n",
-    "        pdf = gaussian_kde(df[f\"[{of}/{to}]\"][is_region].to_numpy())\n",
+    "        is_age = df[\"StellarAge_Gyr\"] > 5.0\n",
+    "        pdf = gaussian_kde(df[f\"[{of}/{to}]\"][is_region & is_age].to_numpy())\n",
     "        pdf_x = np.linspace(ax.get_xlim()[0], ax.get_xlim()[1], 100)\n",
     "        ax.plot(pdf_x, np.nanmedian(medians[f\"{of}_{to}_{c}\"], axis=0),\n",
     "                lw=1.0, color=color, zorder=16, label=\"Median\",\n",
@@ -963,7 +968,7 @@
     "\n",
     "fig.savefig(\n",
     "    f\"../images/metal_abundance_distribution/\"\n",
-    "    f\"included_2dpanels{config['FILE_SUFFIX']}.pdf\")\n",
+    "    f\"included_2dpanels_older5Gyr{config['FILE_SUFFIX']}.pdf\")\n",
     "plt.close(fig)"
    ]
   }
