--- a/scripts/Galaxy Decomposition.ipynb
+++ b/scripts/Galaxy Decomposition.ipynb
@@ -10,12 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "from matplotlib import pyplot as plt\n",
     "import matplotlib.colors as mcolors\n",
+    "import matplotlib.patheffects as pe\n",
     "import numpy as np"
    ]
   },
@@ -23,17 +24,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/setuptools/_importlib.py:23: UserWarning: `importlib-metadata` version is incompatible with `setuptools`.\n",
-      "This problem is likely to be solved by installing an updated version of `importlib-metadata`.\n",
-      "  warnings.warn(msg)  # Ensure a descriptive message is shown.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from auriga.snapshot import Snapshot\n",
     "from auriga.images import figure_setup, set_axs_configuration\n",
@@ -116,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,18 +142,34 @@
     "            size=8.0, transform=ax.transAxes, ha='left', va='top')\n",
     "\n",
     "    # Draw lines for the components\n",
-    "    ax.plot([DISC_MIN_CIRC] * 2,\n",
-    "            ax.get_ylim(),\n",
-    "            ls=\"--\", c='k')\n",
-    "    ax.plot([DISC_STD_CIRC - COLD_DISC_DELTA_CIRC] * 2,\n",
-    "            ax.get_ylim(),\n",
-    "            ls=\"--\", c='k')\n",
-    "    ax.plot([DISC_STD_CIRC + COLD_DISC_DELTA_CIRC] * 2,\n",
-    "            ax.get_ylim(),\n",
-    "            ls=\"--\", c='k')\n",
-    "    ax.plot([ax.get_xlim()[0], DISC_MIN_CIRC],\n",
-    "            [BULGE_MAX_SPECIFIC_ENERGY] * 2,\n",
-    "            ls=\"--\", c='k')\n",
+    "    ax.plot([DISC_MIN_CIRC] * 2, ax.get_ylim(), ls=(0, (5, 1)), c='k')\n",
+    "    ax.plot([DISC_STD_CIRC - COLD_DISC_DELTA_CIRC] * 2, ax.get_ylim(),\n",
+    "            ls=(0, (5, 1)), c='k')\n",
+    "    ax.plot([DISC_STD_CIRC + COLD_DISC_DELTA_CIRC] * 2, ax.get_ylim(),\n",
+    "            ls=(0, (5, 1)), c='k')\n",
+    "    ax.plot([ax.get_xlim()[0], DISC_MIN_CIRC],[BULGE_MAX_SPECIFIC_ENERGY] * 2,\n",
+    "            ls=(0, (5, 1)), c='k')\n",
+    "\n",
+    "    ax.text(s=r\"$\\textbf{Bulge}$\", x=0.02, y=0.02, size=8.0,\n",
+    "            va=\"bottom\", ha=\"left\", color=settings.component_colors[\"B\"],\n",
+    "            path_effects=[pe.withStroke(linewidth=0.75, foreground=\"w\")],\n",
+    "            transform=ax.transAxes)\n",
+    "    ax.text(s=r\"$\\textbf{Halo}$\", x=0.02, y=0.42, size=8.0,\n",
+    "            va=\"bottom\", ha=\"left\", color=settings.component_colors[\"H\"],\n",
+    "            path_effects=[pe.withStroke(linewidth=0.75, foreground=\"w\")],\n",
+    "            transform=ax.transAxes)\n",
+    "    ax.text(s=r\"$\\textbf{Cold Disc}$\", x=0.754375, y=0.98, size=8.0,\n",
+    "            va=\"top\", ha=\"left\", color=settings.component_colors[\"CD\"],\n",
+    "            path_effects=[pe.withStroke(linewidth=0.75, foreground=\"w\")],\n",
+    "            transform=ax.transAxes, rotation=90)\n",
+    "    ax.text(s=r\"$\\textbf{Warm Disc}$\", x=0.645, y=0.98, size=8.0,\n",
+    "            va=\"top\", ha=\"left\", color=settings.component_colors[\"WD\"],\n",
+    "            path_effects=[pe.withStroke(linewidth=0.75, foreground=\"w\")],\n",
+    "            transform=ax.transAxes, rotation=90)\n",
+    "    ax.text(s=r\"$\\textbf{Warm Disc}$\", x=0.910625, y=0.98, size=8.0,\n",
+    "            va=\"top\", ha=\"left\", color=settings.component_colors[\"WD\"],\n",
+    "            path_effects=[pe.withStroke(linewidth=0.75, foreground=\"w\")],\n",
+    "            transform=ax.transAxes, rotation=90)\n",
     "\n",
     "    fig.savefig(\n",
     "        f\"../images/galaxy_decomposition/phase_space_{simulation}{SUFFIX}.pdf\")\n",
@@ -171,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
