Add distribution of abundances.

--- a/scripts/Abundance Distribution.ipynb
+++ b/scripts/Abundance Distribution.ipynb
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,10 +926,9 @@
     "            color = settings.component_colors[c] if galaxy == 6 else \"silver\"\n",
     "            ax = axs[i, j]\n",
     "            is_region = df[\"RegionTag\"] == i\n",
-    "            is_age = df[\"StellarAge_Gyr\"] > 5.0\n",
     "\n",
     "            pdf = gaussian_kde(\n",
-    "                df[f\"[{of}/{to}]\"][is_region & is_age].to_numpy())\n",
+    "                df[f\"[{of}/{to}]\"][is_region].to_numpy())\n",
     "            pdf_x = np.linspace(ax.get_xlim()[0], ax.get_xlim()[1], 100)\n",
     "            ax.plot(pdf_x, pdf(pdf_x), lw=1.0,\n",
     "                    color=color, zorder=zorder, label=label)\n",
@@ -940,8 +939,7 @@
     "        color = settings.component_colors[c]\n",
     "        ax = axs[i, j]\n",
     "        is_region = df[\"RegionTag\"] == i\n",
-    "        is_age = df[\"StellarAge_Gyr\"] > 5.0\n",
-    "        pdf = gaussian_kde(df[f\"[{of}/{to}]\"][is_region & is_age].to_numpy())\n",
+    "        pdf = gaussian_kde(df[f\"[{of}/{to}]\"][is_region].to_numpy())\n",
     "        pdf_x = np.linspace(ax.get_xlim()[0], ax.get_xlim()[1], 100)\n",
     "        ax.plot(pdf_x, np.nanmedian(medians[f\"{of}_{to}_{c}\"], axis=0),\n",
     "                lw=1.0, color=color, zorder=16, label=\"Median\",\n",
@@ -954,7 +952,7 @@
     "\n",
     "fig.savefig(\n",
     "    f\"../images/metal_abundance_distribution/\"\n",
-    "    f\"included_2dpanels_older5Gyr{config['FILE_SUFFIX']}.pdf\")\n",
+    "    f\"included_2dpanels{config['FILE_SUFFIX']}.pdf\")\n",
     "plt.close(fig)"
    ]
   }
